--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "inquirer": "^7.1.0",
     "node-opcua": "^2.5.12",
     "node-opcua-file-transfer": "^2.5.12",
-    "pdfkit": "^0.11.0"
+    "pdfkit": "^0.11.0",
+    "promptly": "^3.0.3"
   }
 }
